# hexlet_pytest

./: .gitignore  Makefile  pyproject.toml
hexlet_pytest/: reverse.py
tests/: test_reverse.py  test_stack.py
tests/test_data/: result_for_reverse.txt  text_for_reverse.txt
